# quant_assignment

./: .gitignore  .gitmodules  README.md
week1/: note.ipynb
week2/: CMakeLists.txt  README.md  note.ipynb
week2/scripts/: pid.sh  run.sh  stop.sh
week2/src/: main.cpp
week2/src/common/: common.h
week2/src/quant/: MdSpi.cpp  MdSpi.h  config.cpp  config.h  quant.cpp  quant.h
week3/: Lecture3.ipynb  README.md  ps3_1.cpp
week3/data/: IF2004_20200417Backtester.CSV  IF2004_20200417Backtester.xlsx  NaiveExcelBacktester.csv  rb.csv
week4/: README.md
week4/backtester/: backtest.py  const.py  datahandler.py  event.py  execution.py  handler.py  performance.py  portfolio.py  run_excel_backtest.py  run_ma_backtest.py  strategy.py  trade.py  util.py
week4/backtester/config/: config-excel.conf  config.conf
week4/factor/: factor.ipynb
week6/: README.md  european_option.py  main.ipynb  raw_to_tick.py
